Style 2023 RFP page(s) Adding new color scheme Changing homepage layout Don't judge me for the color names

--- a/src/pages/_app.css
+++ b/src/pages/_app.css
@@ -59,6 +59,9 @@
   --color-antique-teal: #75949E;
   --color-skyblue: #88B8D1;
 
+  --color-bright-peach: #EB6955;
+  --color-chill-green: #B3E6E0;
+
 }
 
 html,
