Force-fix icon jankiness

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -21,3 +21,10 @@
 .NavNew-inner-right {
   background: #8ff;
 }
+
+.dropdownIcon {
+  margin-left: 0.5rem;
+  /* Not good practice... if someone else wants to figure out why by default (without these two lines below) the icon size changes on different pages feel free! */
+  width: 1rem !important;
+  height: 100% !important;
+}
