--- a/src/pages/_app.css
+++ b/src/pages/_app.css
@@ -1,10 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
 @import "./_reset.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Serif&display=swap");
 
 :root {
   --type-t50: 0.87rem;
@@ -69,7 +68,7 @@ body {
   color: var(--color-text);
   padding: 0;
   margin: 0;
-  font-family: "Noto Sans Serif", Helvetica, Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   min-height: 100vh;
 }
 
