--- a/src/pages/_app.css
+++ b/src/pages/_app.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
-@import "./_reset.css";
+/* @import "./_reset.css"; */
 
 @tailwind base;
 @tailwind components;
