--- a/src/pages/_app.css
+++ b/src/pages/_app.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+/* @import "./_reset.css"; */
 
-@import "./_reset.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -64,7 +64,7 @@
 }
 
 html,
-body {
+html > * {
   color: var(--color-text);
   padding: 0;
   margin: 0;
@@ -177,6 +177,7 @@ td,
 th {
   border: 1px solid #c6c9cc;
   padding: 0.5rem 1rem;
+  vertical-align: baseline;
 }
 
 tbody tr:nth-child(2n) {
