--- a/src/pages/_app.css
+++ b/src/pages/_app.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap"); */
 /* @import "./_reset.css"; */
 
 @tailwind base;
