More CSS cleanup/optimization

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -16,7 +16,7 @@
 .dropdownCompactOuter {
   font-size: 14px;
   line-height: 1;
-  padding-top: 0.25rem;
+  padding-top: 3px;
 }
 
 .dropdownCompact {
