Archive nav + light color palette fixes

--- a/src/pages/_app.css
+++ b/src/pages/_app.css
@@ -94,9 +94,9 @@ html:root {
 
   /* Conference 2023 Colors */
   --color-bright-peach: #EB6955;
-  --color-chill-green: #B3E6E0;
-  --color-dark-teal: #a2eae7;
-  --color-green-gray: #b7d5b7;
+  --color-chill-green: #b8e0dc;
+  --color-dark-teal: #a8c6c0;
+  --color-green-gray: #aec6ae;
 }
 
 .img-logo {
