--- a/src/pages/_app.css
+++ b/src/pages/_app.css
@@ -239,6 +239,6 @@ table.table-mb th {
   border-bottom: 1px solid #c6c9cc;
 }
 
-tbody tr:nth-child(2n) {
+/* tbody tr:nth-child(2n) {
   background-color: rgba(0, 0, 0, 0.025);
-}
+} */
